--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -87,4 +87,8 @@
     <integer name="hotseat_all_apps_index">2</integer>
     <!-- must be between 0 and 100 -->
     <integer name="hotseat_item_scale_percentage">100</integer>
+
+<!-- Wallpaper -->
+    <bool name="config_render_wallpaper_internally">false</bool>
+
 </resources>
